fixes contrast issue detailed in https://github.com/godotengine/godot-website/issues/913

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -62,7 +62,7 @@
   --download-hero-color: hsla(0, 0%, 100%, 0.9);
   --download-main-details-color: #f1f1f1;
   --download-table-color: rgba(22, 22, 22, 0.08);
-  --platform-note-background-color: rgba(48, 86, 210, 0.9);
+  --platform-note-background-color: rgba(212, 237, 255, 0.9);
   --platform-code-background-color: #e5ebf1;
   --download-mono-background-color: rgba(43, 58, 76, 0.82);
 
@@ -144,7 +144,7 @@
     --download-hero-color: hsla(0, 0%, 100%, 0.9);
     --download-main-details-color: #f1f1f1;
     --download-table-color: rgba(0, 0, 0, 0.2);
-    --platform-note-background-color: rgba(255, 255, 255, 0.9);
+    --platform-note-background-color: rgba(150, 150, 150, 0.9);
     --platform-code-background-color: #282b2e;
     --download-mono-background-color: rgba(132, 151, 174, 0.68);
 
